--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,17 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
     </head>
     <body>
 
         <div class="site">
           <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+            <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
           </div>
 
@@ -26,15 +26,12 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Aziz Bekkine<br />
-                Developer<br />
                 abekkine@gmail.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/abekkine">github.com/abekkine</a><br />
-                <a href="https://twitter.com/abekkine">twitter.com/abekkine</a><br />
+                <a href="https://github.com/abekkine">github.com/abekkine</a>
               </p>
             </div>
           </div>
